# Aviso

./: CMakeLists.txt  README.md  aviso.conf  configure.aviso  irexprc.sourceme
AvisoCompiler/: AvisoInstrument.cpp  CMakeLists.txt  Makefile  README  llvm-3.1.src.patch  myexpand.cpp
AvisoCompiler/AvisoGCC/: Makefile  aviso.c  myexpand.c  myexpand.cpp
AvisoProf/: Makefile  Makefile.avisoprof  Makefile.rules  ap.cpp  make.sh
Compiler/: CMakeLists.txt
Compiler/Aviso/: AvisoInstrumentBranches.cpp  AvisoInstrumentBranches.h  CMakeLists.txt
Compiler/Tests/: Makefile
Runner/: AvisoRunner.go
Runtime/: Avoidance.cpp  Avoidance.h  AvoidanceManager.h  Backtrace.h  CMakeLists.txt  ClockPortability.cpp  ClockPortability.h  ConfigurationManager.cpp  ConfigurationManager.h  Constructor.cpp  CorrectRunModel.cpp  CorrectRunModel.h  EventRoutines.cpp  EventRoutines.h  GetBacktrace.cpp  GetBacktrace.h  IR_PThreadsRuntime.cpp  IR_PThreadsRuntime.h  IR_PThreadsRuntime_private.h  LogicalTimeKeeper.cpp  LogicalTimeKeeper.h  Makefile  Misc.h  PluginProcessing.cpp  PluginProcessing.h  STQueue.cpp  STQueue.h  ThreadData.h  TraceEvent.h  Tracer.h
Runtime/StateMachines/: SMAction.h  StateMachine.h  StateMachineFactory.h
Scripts/: GeneratePairFSMs.pl  Makefile  ProcessPairs.pl  RPBtoBTSeq.pl  RankPair.pl  ThreadConsecutiveEvents.pl  TriplesFromRecencyWindow.pl  compileStateMachine.pl  compile_fsm.sh  computePairHistogram.cpp  generate_correct_model.sh  generate_fsms.sh  pairFrequencies.go  pairFrequencies.pl  parse_profile.sh
Server/: .avisoFSMRecord  AvisoServer.go
Server/avisoevent/: avisoevent.go
Server/avisoexternal/: avisoexternal.go
Server/avisofailure/: avisofailure.go
Server/avisoglobal/: avisoglobal.go
Server/avisomodel/: avisomodel.go
Server/avisomsgs/: avisomsgs.go
Server/avisooutput/: avisooutput.go
Server/avisoscript/: avisoscript.go
Server/avisostats/: avisostats.go
Server/distribution/: distribution.go
Server/fsm/: fsm.go
Test/: Makefile  test  test.c  test.points
Test/test.dSYM/Contents/Resources/DWARF/: test
Tests/Crasher/: Crasher.c  Makefile
